--- a/src/assets/scss/blocks/page.scss
+++ b/src/assets/scss/blocks/page.scss
@@ -1,3 +1,21 @@
 .page{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     overflow: hidden;
+
+    justify-content: center;
+}
+
+.page__title{
+    margin-bottom: 3rem;
+
+    font-size: 2.1rem;
+    font-weight: 400;
+    line-height: 2.1rem;
+    color: $white;
+    
+    &--center{
+        text-align: center;
+    }
 }
