--- a/src/assets/scss/blocks/social.scss
+++ b/src/assets/scss/blocks/social.scss
@@ -4,6 +4,17 @@
 
     display: flex;
     justify-content: space-between;
+
+    &--modal_share{
+        width: 100%;
+        margin: 0;
+        justify-content: center;
+        padding: 8rem;
+
+        li{
+            margin: 0 0.75rem;
+        }
+    }
 }
 
 .hr{
