--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -3,7 +3,7 @@
 <head>
     {{> head }}
 </head>
-<body>
+<body class="">
      
 <div class="page">
 
@@ -22,6 +22,8 @@
     </main>
 
 </div>
+
+{{> story_modal }}
    
     <!-- JS-->
     <script src="assets/js/app.js"></script>
