--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,10 +3,10 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item">
-                    <a class="nav__link" href="">Главная</a>
+                    <a class="nav__link" href="index.html">Главная</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link has-subnav" href="">Обо мне</a>
+                    <a class="nav__link has-subnav" href="">Статьи</a>
                     <ul class="subnav">
                         <li>
                             <a class="subnav__link" href="">Создание сайтов</a>
@@ -20,10 +20,10 @@
                     </ul>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link" href="">Статьи</a>
+                    <a class="nav__link" href="text.html">Обо мне</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link" href="">Реклама</a>
+                    <a class="nav__link" href="text.html">Реклама</a>
                 </li>
             </ul>
         </nav>
@@ -32,11 +32,14 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li>
-                    <a class="nav__link" href="">Профиль</a>
+                    <a class="nav__link" href="profile.html">Профиль</a>
+                </li>
+                <li>
+                    <a class="nav__link" href="profile.html">Выйти</a>
                 </li>
             </ul>
         </nav>
-        <form class="search" action="/" method="post" >
+        <form class="search" action="search.html" method="get" >
             <input class="search__input" type="text" placeholder="Поиск по блогу">
         </form>
     </div>
