--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -40,7 +40,7 @@
 
 
     <div class="sidebar_footer">
-        <a class="btn btn--red" href="#">Мои работы</a>
+        <a class="btn btn--red" href="works.html">Мои работы</a>
         <button class="btn btn--blue" type="button">Написать мне</button>
 
 
