--- a/src/assets/scss/blocks/add_post.scss
+++ b/src/assets/scss/blocks/add_post.scss
@@ -5,6 +5,10 @@
     rgba($black, 0.45);
     border-radius: 5px;
     padding: 1.5rem 2rem;
+
+    @include breakpoint($mobile-bp) {
+        padding: 1.5rem;
+    }
 }
 
 .add-post__form{
@@ -14,7 +18,7 @@
 
 .add-post__textarea{
     display: block;
-    width: 77%;
+    flex-grow: 1;
     height: 26px;
     font-family: inherit;
     font-size: 1.5rem;
@@ -22,6 +26,7 @@
     border: none;
     background-color: transparent;
     resize: none;
+    overflow: hidden;
 
 
     &::placeholder{
@@ -30,7 +35,8 @@
 }
 
 .add-post__form_actions{
-    width: 23%;
+    
+    flex-shrink: 0;
     display: flex;
     justify-content: flex-end;
     
@@ -52,6 +58,10 @@
     transition: background-color 0.2s ease-in-out;
     &:hover{
         background-color: darken(#ebebeb, 7%);
+    }
+
+    @include breakpoint($mobile-bp){
+        margin-right: 0.7rem;
     }
 }
 
