--- a/src/assets/scss/blocks/comments.scss
+++ b/src/assets/scss/blocks/comments.scss
@@ -12,6 +12,10 @@
         padding-left: 3rem;
         padding-top: 2rem;
         
+        @include breakpoint($mobile-bp){
+            padding-left: 1.5rem;
+            padding-top: 1rem;
+        }
     }
 }
 
