--- a/src/assets/scss/blocks/page.scss
+++ b/src/assets/scss/blocks/page.scss
@@ -5,6 +5,25 @@
     overflow: hidden;
 
     justify-content: center;
+
+        @include breakpoint($tablet-bp) {
+            position: relative;
+        
+            .show__sidebar & {
+                
+            &::after{
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background: rgba($black, 0.9    );
+            left: 0;
+            top: 0;
+            z-index: 100;
+            }
+        }
+    }
 }
 
 .page__title{
@@ -16,6 +35,10 @@
     color: $white;
     
     &--center{
+        text-align: center;
+    }
+
+    @include breakpoint($mobile-bp){
         text-align: center;
     }
 }
