--- a/src/assets/scss/blocks/post.scss
+++ b/src/assets/scss/blocks/post.scss
@@ -5,6 +5,10 @@
     margin-bottom: 3rem;
     padding: 2.5rem ;
     overflow: hidden;
+
+    @include breakpoint($mobile-bp){
+        padding: 1.5rem;
+    }
 }
 
 .post__description{
@@ -88,6 +92,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include breakpoint($mobile-bp){
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
 
 .post__preview{
@@ -101,6 +110,10 @@
     color: #828282;
     line-height: 1.2;
     display: flex;
+
+    @include breakpoint($mobile-bp){
+        margin-bottom: 1rem;
+    }
 } 
 
 .post__data-item{
@@ -135,6 +148,7 @@
 .post_title{
     font-size: 1.8rem;
     margin-bottom: 1rem;
+    line-height: 2rem;
     color: $white;
     a{
         color: inherit;
@@ -145,8 +159,8 @@
         }
     }
 
-    &--mb0{
-        margin-bottom: 0;
+    &--open{
+        margin-bottom: .75rem;
     }
     
 }
