--- a/src/assets/scss/blocks/profile.scss
+++ b/src/assets/scss/blocks/profile.scss
@@ -4,6 +4,11 @@
     position: relative;
     padding-top: 69px;
     text-align: center;
+
+    @include breakpoint($tablet-bp){
+        padding-top: 0.8rem;
+        text-align: left;
+    }
 }
  .profile_avatar{
     width: 10rem;
@@ -15,16 +20,37 @@
     bottom: auto; left: 0; right: 0;
     margin: 0 auto;
     box-shadow: 0 7px 20px rgba(#000, 0.25);
+    
+    @include breakpoint($tablet-bp){
+        width: 6.5rem;
+        height: 6.5rem;
+        top: -20px;
+        margin: 0;
+        margin-left: 1.5rem;
+    }
 }
 
 .profile_name{
-    font-size: 18px;
+    font-size: 1.8rem;
     color: $white;
+
+    @include breakpoint($tablet-bp){
+        font-size: 1.5rem;
+        padding-left: 9rem;
+        line-height: 1.5rem;
+       
+    }
 }
 
 .profile_prof{
     font-size: 14px;
     font-weight: 200;
     color: #dedede;
+
+    @include breakpoint($tablet-bp){
+        font-size: 1.2rem;
+        padding-left: 9rem;
+        
+    }
 }
 
