--- a/src/assets/scss/blocks/sidebar.scss
+++ b/src/assets/scss/blocks/sidebar.scss
@@ -9,10 +9,26 @@
     top: 0;
     left: 0;
     z-index: $z-index-sidebar ;
+
+    transition: transform .2s linear;
+
+    @include breakpoint($tablet-bp){
+        overflow: auto;
+        height: calc(100vh - 4rem);
+
+        top: 4rem;
+
+        transform: translateX(-100%);
+        transition: transform .2s linear;
+
+            .show__sidebar &{
+                transform: translateX(0);
+            }
+    } 
 }
 
 .sidebar_header{
-    height: 180px;
+    height: 18rem;
     background-color: $secondary;
 
     img{
@@ -22,10 +38,18 @@
         height: 100%;
         object-fit: cover;
     }
+
+    @include breakpoint($tablet-bp){
+        height: 10rem;
+    }
 }
 
 .sidebar_footer{
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
+
+    @include breakpoint($mobile-bp){
+       margin: 1.5rem 0;
+    }
 }
