--- a/src/assets/scss/blocks/subnav.scss
+++ b/src/assets/scss/blocks/subnav.scss
@@ -9,8 +9,20 @@
     top: 100%;
     left: 0;
 
-        box-shadow: 0 6px 8px rgba($black, 20%);
-}
+    box-shadow: 0 6px 8px rgba($black, 20%);
+
+    @include breakpoint($tablet-bp){
+            position: static;
+            width: 100%;
+            background-color: transparent;
+            font-size: 1.6rem;
+            font-weight: 300;
+            padding-left: 1.7rem;
+            box-shadow: none;
+    }
+
+    
+ }
 
 .subnav__link{
     display: block;
@@ -26,4 +38,17 @@
         text-decoration: none;
     }
 
+    @include breakpoint($tablet-bp){
+        
+        background-color: transparent;
+        font-size: 1.5rem;
+        line-height: 3rem;
+        font-weight: 300;
+        
+        &:hover{
+            background-color: transparent;
+            text-decoration: none;
+            
+        }
+    }
 }
