--- a/src/assets/scss/blocks/work.scss
+++ b/src/assets/scss/blocks/work.scss
@@ -10,6 +10,12 @@
     border-radius: 0 5px 5px 0;
     box-shadow: 0 15px 25px rgba($black, .25);
     display: flex;
+
+    @include breakpoint($mobile-bp){
+        flex-direction: column;
+        border-radius: 5px 5px 5px 5px;
+        overflow: hidden;
+    }
 }
 
 .work__content{
@@ -18,6 +24,11 @@
     padding: 2rem 2.5rem;
     display: flex;
     flex-direction: column;
+
+    @include breakpoint($mobile-bp){
+        max-width: none;
+        padding: 1.5rem;
+    }
     
 }
 
@@ -26,6 +37,10 @@
     font-weight: 500;
     line-height: 1.2;
     margin-bottom: 3rem;
+
+    @include breakpoint($mobile-bp){
+        margin-bottom: 1.5rem;
+    }
 }
 .work__description{
     font-size: 1.6rem;
@@ -33,6 +48,10 @@
     color: #d2d2d2;
     line-height: 27px;
     margin-bottom: 3rem;
+
+    @include breakpoint($mobile-bp){
+        margin-bottom: 1.5rem;
+    }
 }
 
 .work__preview{   
@@ -45,6 +64,14 @@
         height: 100%;
         object-fit: cover;
     }
+
+    @include breakpoint($mobile-bp){
+        width: 100%;
+        
+        img{
+            height: 15rem; 
+        }
+    }
 }
 
 .work__tags{
@@ -54,4 +81,9 @@
 
 .work__footer{
     margin-top: auto;
+
+    @include breakpoint($mobile-bp){
+        margin-top: 2rem;
+    }
+
 }
