--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,7 +27,7 @@
                 </li>
             </ul>
         </nav>
-        <button class="burger active" type="button">
+        <button class="burger active" type="button" id="sidebarToggle">
             <span >Открыть навигацию</span>
         </button>
 
