--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -1,4 +1,4 @@
-<aside class="sidebar">
+<aside class="sidebar" id="sidebar">
     <div class="sidebar_header">
         <img src="assets/images/sidebar_header.jpg" alt="">
     </div>
@@ -13,8 +13,8 @@
                     <li class="nav__item">
                         <a class="nav__link" href="index.html">Главная</a>
                     </li>
-                    <li class="nav__item click">
-                        <a class="nav__link has-subnav " href="index.html">Статьи</a>
+                    <li class="nav__item" >
+                        <span class="nav__link has-subnav ">Статьи</span>
                         <ul class="subnav">
                             <li>
                                 <a class="subnav__link" href="">Создание сайтов</a>
@@ -75,7 +75,7 @@
 
     <div class="sidebar_footer">
         <a class="btn btn--red" href="works.html">Мои работы</a>
-        <button class="btn btn--blue" type="button">Написать мне</button>
+        <button class="btn btn--blue" data-modal="contact-modal" type="button">Написать мне</button>
 
 
     </div>
