--- a/src/assets/scss/blocks/modal.scss
+++ b/src/assets/scss/blocks/modal.scss
@@ -14,6 +14,10 @@
     justify-content: center;
     align-items: center;
 
+    &.show{
+        display: flex;
+    }
+
 }
 
 .modal__content{
@@ -23,6 +27,18 @@
     border-radius: 5px;
     background-color: $primary;
     position: relative;
+    opacity: 0;
+
+    transform: translateY(-50px);
+    transition: transform 200ms ease-in-out,
+    opacity 200ms ease-in-out;
+
+    &--story{
+        padding: 0;
+        background:none ;
+    }
+
+
     
 }
 
@@ -60,6 +76,9 @@
 
         transform: rotate(90deg)
     }
-    
+}
 
+.modal__video{
+    display: block;
+    margin: 0 auto;
 }
