--- a/src/assets/scss/blocks/page.scss
+++ b/src/assets/scss/blocks/page.scss
@@ -8,21 +8,7 @@
 
         @include breakpoint($tablet-bp) {
             position: relative;
-        
-            .show__sidebar & {
-                
-            &::after{
-            content: "";
-            display: block;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            background: rgba($black, 0.9    );
-            left: 0;
-            top: 0;
-            z-index: 100;
-            }
-        }
+         
     }
 }
 
@@ -40,5 +26,18 @@
 
     @include breakpoint($mobile-bp){
         text-align: center;
+    }
+}
+
+.page__mask{
+    @include breakpoint($tablet-bp){
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: rgba($black, 0.9);
+        left: 0;
+        top: 0;
+        z-index: 100;
     }
 }
