--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -24,9 +24,14 @@ body {
     "Segoe UI Symbol";
     line-height: 1.5;
 
-    &.no-scroll,
-    &.show__sidebar{
+    &.no-scroll{
         overflow: hidden;
+    }
+
+    @include breakpoint($tablet-bp){
+        &.show__sidebar{
+            overflow: hidden;
+        }
     }
 }
 
