--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -5,7 +5,7 @@
 </head>
 <body class="">
      
-<div class="page">
+<div class="page" id="page">
 
     
          {{> header }}
@@ -24,6 +24,8 @@
 </div>
 
 {{> story_modal }}
+{{> contact_modal }}
+{{> share_modal }}
    
     <!-- JS-->
     <script src="assets/js/app.js"></script>
