--- a/src/partials/contact_modal.html
+++ b/src/partials/contact_modal.html
@@ -1,4 +1,4 @@
-<div class="modal">
+<div class="modal" id="contact-modal">
     <div class="modal__content">
         <button class="modal__close" type="button" >
         <img class="" src="/assets/images/close.svg" alt="Закрыть окно">
@@ -19,7 +19,7 @@
 
             <div class="form__group">
                 <textarea class="form__control" name="comments-text"
-                 placeholder="Текст сообщения"></textarea>
+                 placeholder="Текст сообщения" data-autoresize></textarea>
                 <span class="form__line" ></span>
             </div>    
                 <button class="btn btn--blue btn--comments btn--modal" 
