--- a/src/partials/story_modal.html
+++ b/src/partials/story_modal.html
@@ -1,3 +1,6 @@
-<div class="modal">
-    <video class="story_video" src="" poster="/assets/images/poster_video1.jpg"></video>
+<div class="modal" id="story-modal">
+    <div class="modal__content modal__content--story">
+        <video class="modal__video" src="" poster="/assets/images/poster_video1.jpg"></video>
+
+    </div>
 </div>
