--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -28,6 +28,6 @@
 {{> share_modal }}
    
     <!-- JS-->
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/app.js?v=1"></script>
 </body>
 </html>
