--- a/src/partials/share_modal.html
+++ b/src/partials/share_modal.html
@@ -1,11 +1,13 @@
-<div class="modal">
+<div class="modal" id="share-modal">
     <div class="modal__content">
-        <button class="modal__close" type="button" >
-        <img class="" src="/assets/images/close.svg" alt="Закрыть окно">
-        </button>
+        <button class="modal__close" type="button" id="share_close" >
+            <img class="" src="/assets/images/close.svg" alt="Закрыть окно">
+            </button>
         
+            
 
         <ul class="social social--modal_share">
+            
             <li class="social_item">
                 <a href="#" >
                     <img src="/assets/images/share/vk.svg" alt="">
