--- a/src/partials/story_modal.html
+++ b/src/partials/story_modal.html
@@ -1,6 +1,31 @@
-<div class="modal" id="story-modal">
+<div class="modal" id="story-modal_1">
     <div class="modal__content modal__content--story">
-        <video class="modal__video" src="" poster="/assets/images/poster_video1.jpg"></video>
+        <video controls  width="100%" height="100%" preload="none" poster="/assets/images/poster_video1.jpg">
+            <source src="/assets/media/stori.webm" type="video/webm">
+          </video>
+    </div>
+</div>
 
+<div class="modal" id="story-modal_2">
+    <div class="modal__content modal__content--story">
+        <video controls  width="100%" height="100%" preload="none" poster="/assets/images/poster_video1.jpg">
+            <source src="/assets/media/stori.webm" type="video/webm">
+          </video>
+    </div>
+</div>
+
+<div class="modal" id="story-modal_3">
+    <div class="modal__content modal__content--story">
+        <video controls  width="100%" height="100%" preload="none" poster="/assets/images/poster_video1.jpg">
+            <source src="/assets/media/stori.webm" type="video/webm">
+          </video>
+    </div>
+</div>
+
+<div class="modal" id="story-modal_4">
+    <div class="modal__content modal__content--story">
+        <video controls  width="100%" height="100%" preload="none" poster="/assets/images/poster_video1.jpg">
+            <source src="/assets/media/stori.webm" type="video/webm">
+          </video>
     </div>
 </div>
